--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.3.1
+FROM ruby:2.5 .1
 RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 RUN mkdir /myapp
 WORKDIR /myapp
@@ -7,11 +7,9 @@ COPY Gemfile.lock /myapp/Gemfile.lock
 RUN bundle install
 COPY . /myapp
 
-# Add a script to be executed every time the container starts.
-COPY entrypoint.sh /usr/bin/
-RUN chmod +x /usr/bin/entrypoint.sh
-ENTRYPOINT ["docker-entrypoint.sh"]
-EXPOSE 3000
+RUN gem install bundler -v 1.17.3 && \
+    bundle install
+
 
 # Start the main process.
 CMD ["rails", "server", "-b", "0.0.0.0"]
